objects/EUR_CRM_Contract_Product_Item__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Actual_Performance__c</fullName>
        <description>This field has been created for EUR DK Project.</description>
        <label>Actual Performance (Bottles)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Amount_Spent_Reference__c</fullName>
        <description>For system use, reference field for EUR_CRM_Amount_Spent</description>
        <label>Total Spent (Reference)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Amount_Spent__c</fullName>
        <formula>IF(OR(ISNULL(EUR_CRM_Marketing_Amount__c), EUR_CRM_Marketing_Amount__c == 0), (EUR_CRM_Quantity__c *  EUR_CRM_Amount__c), EUR_CRM_Marketing_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Amount__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brand Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Name__c</fullName>
        <formula>EUR_CRM_Brand__r.Name</formula>
        <label>Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Size_Name__c</fullName>
        <label>Brand Quality Size Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality-Size (EU)</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipName>Contract_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipName>Contract_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>EUR_CRM_Brand__c</referenceTo>
        <relationshipName>Contract_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Activity_Item__c</fullName>
        <label>Contract Activity Item</label>
        <referenceTo>EUR_CRM_Contract_Activity_Item__c</referenceTo>
        <relationshipName>Contract_Product_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Event</label>
        <referenceTo>EUR_CRM_Contract_Event__c</referenceTo>
        <relationshipName>Contract_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <description>Country code of the contract</description>
        <formula>EUR_CRM_Contract_Activity_Item__r.EUR_CRM_Contract__r.EUR_CRM_Country_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Discount_Rate__c</fullName>
        <label>Discount Rate (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Exclude_Budget_Deduction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Budget Deduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Exclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For the following affiliates:
1. EUR DE - Germany</description>
        <label>Exclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Marketing_Amount__c</fullName>
        <label>Marketing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Name_Reference__c</fullName>
        <description>For System use</description>
        <label>Name Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_of_People__c</fullName>
        <label>No. of People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU_Name__c</fullName>
        <formula>EUR_CRM_SKU__r.Name</formula>
        <label>SKU Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU (EU)</label>
        <referenceTo>EUR_CRM_SKU__c</referenceTo>
        <relationshipName>Contract_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stock_Deal_Mechanic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Deal Mechanic</label>
        <referenceTo>EUR_CRM_Stock_Deal_Mechanic__c</referenceTo>
        <relationshipLabel>Contract Product Item (EU)</relationshipLabel>
        <relationshipName>Contract_Product_Item_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Training_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EUR_CRM_Mechanic__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>EUR ZA Mechanic</value>
            </filterItems>
            <filterItems>
                <field>EUR_CRM_Mechanic__c.Name</field>
                <operation>contains</operation>
                <value>Training</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EUR_CRM_Mechanic__c</referenceTo>
        <relationshipLabel>Contract Product Item (EU)</relationshipLabel>
        <relationshipName>Contract_Product_Item_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Liter</fullName>
                    <default>true</default>
                    <label>Liter</label>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_With_Logo__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Applicable for certain mechanic type/s:
1. Napkins</description>
        <label>With Logo</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract Product Item (EU)</label>
    <listViews>
        <fullName>Contract_Product_Item_EU</fullName>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>EUR_CRM_Brand__c</columns>
        <columns>EUR_CRM_Brand_Quality__c</columns>
        <columns>EUR_CRM_Brand_Quality_Size__c</columns>
        <columns>EUR_CRM_Contract_Activity_Item__c</columns>
        <columns>EUR_CRM_Contract_Event__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>EUR_CRM_Discount_Rate__c</columns>
        <columns>EUR_CRM_Exclusive__c</columns>
        <columns>EUR_CRM_Amount__c</columns>
        <columns>EUR_CRM_Amount_Spent__c</columns>
        <columns>EUR_CRM_Unit__c</columns>
        <columns>EUR_CRM_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Product Item (EU)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_PT_All_Contract_Product_Item_View</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Amount__c</columns>
        <columns>EUR_CRM_Quantity__c</columns>
        <columns>EUR_CRM_Amount_Spent__c</columns>
        <columns>EUR_CRM_Marketing_Amount__c</columns>
        <columns>EUR_CRM_Actual_Performance__c</columns>
        <columns>EUR_CRM_Unit__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>EUR_CRM_Brand__c</columns>
        <columns>EUR_CRM_Brand_Quality__c</columns>
        <columns>EUR_CRM_Brand_Quality_Size__c</columns>
        <columns>EUR_CRM_SKU__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Contract_Product_Item__c.EUR_PT_Contract_Product_Item</value>
        </filters>
        <label>EUR PT All Contract Product Item View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CP-{0000000000}</displayFormat>
        <label>Contract Product Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Product Item (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_PT_Contract_Product_Item</fullName>
        <active>true</active>
        <label>EUR PT Contract Product Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Contract_Product_Item</fullName>
        <active>true</active>
        <label>EUR ZA Contract Product Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>